--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dom-helpers": "^5.2.1",
     "firebase": "^9.18.0",
     "react": "^18.2.0",
+    "react-card-flip": "^1.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-responsive-modal": "^6.4.1",
