--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
     "@react-google-maps/api": "^2.13.1",
